# freeze_watchdog

./: CMakeLists.txt  CMakePresets.json  README.md
src/: plugin-main.cpp  plugin-support.h
